test(lottoPurchase): 로또 구입 로직 새롭게 구현 및 관련된 코드 업데이트